# tauri-vue

./: .gitignore  CTP_API_使用说明.md  DYNAMIC_PRICE_ORDERS_GUIDE.md  FIELD_DESCRIPTIONS_SUMMARY.md  QUERY_FUNCTIONS_GUIDE.md  README.md  REAL_TIME_PRICE_UPDATE_GUIDE.md  TAURI_2_MIGRATION.md  TRADING_PANEL_FIELDS_GUIDE.md  TRADING_PANEL_README.md  TRADING_PANEL_REAL_DATA.md  TRADING_PANEL_USAGE.md  package-lock.json  package.json  question.md  stats.html  tsconfig.app.json  tsconfig.json  vite.config.ts  环境配置.md
src/: App.vue
src-tauri/: .gitignore  CTP_ORDER_API_USAGE.md  Cargo.toml  app.manifest  build.rs  tauri.conf.json  trading_panel_config.xml
src-tauri/capabilities/: contract-search.json  default.json  trading-panels.json
src-tauri/ctp/v6.6.5_20210924/linux_x64/: error.dtd  error.xml
src-tauri/ctp/v6.6.5_20210924/win_x64/: ThostFtdcMdApi.h  ThostFtdcTraderApi.h  ThostFtdcUserApiDataType.h  ThostFtdcUserApiStruct.h
src-tauri/examples/: ctp_version.rs  md_api.rs
src-tauri/src/: ctp_commands.rs  ffi_utils.rs  file_io.rs  lib.rs  main.rs  trade_impl.rs
src/components/: ContractInfo.vue  ContractSearchDialog.vue  OrderBook.vue  OrderSettings.vue  PositionInfo.vue  ReconnectDialog.vue  RiskControl.vue  SystemContextMenu.vue
src/composables/: useContractEvents.ts
src/config/: ctpConfig.ts  environment.ts
src/router/: index.ts
src/services/: autoReconnectService.ts  contractService.ts  ctpService.ts  sessionManager.ts  userStorage.ts
src/stores/: contractStore.ts
src/tests/: TradingPanel.test.ts
src/types/: ctp.ts  trading.ts
src/views/: About.vue  (+13 more)
(+18 files in other folders)
